# Goodall

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py
caches/: similarities.npz  templates.npz  test.npz  train.npz
func/: BuildDataset.py  FeatureExtraction.py  HelperFunctions.py  TemplateFeaturesExtractor.py  Visualization.py
models/: DecisionTrees.py  NeuralNetworks.py  TemplateMatchingSys.py  Wave.py
