[project]
name = "goodall"
version = "0.1.0"
description = "Automated behavioral analysis of primates via audio signal processing and machine learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dtaidistance>=2.4.0",
    "keras>=3.13.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
